# cross-building-and-testing-with-rust

./: Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
_slides/: justfile  rustcross.typ
emulate/: .gitignore  init  run.sh  setup.sh  test-vm.sh
src/: hardware.rs  lib.rs  main.rs
